# balm

./: .cproject  .gitignore  .project  .run_controller_best_effort.sh.un~  CMakeLists.txt  compute_mem_intensive_app.sh  run_controller_best_effort.sh  run_controller_best_effort.sh~  setup-counters-amd.sh  setup-counters-intel.sh
scripts/: bwap_gd_executor.c  generic.sh  oc.sh  on.sh  run_several_app.sh  sc.sh
src/: .BwManager.cpp.un~  .Utilities.cpp.un~  BwManager.cpp  BwManager.cpp~  Logger.cpp  MbaHandler.cpp  MyLogger.cpp  MySharedMemory.cpp  PagePlacement.cpp  PerformanceCounters.cpp  Utilities.cpp  Utilities.cpp~  bw-manager.cpp  performancecounters.cpp
src/include/: BwManager.hpp  Logger.hpp  MbaHandler.hpp  MyLogger.hpp  MySharedMemory.hpp  PagePlacement.hpp  PerformanceCounters.hpp  Utilities.hpp  bw-manager.hpp  performancecounters.hpp
test/: AsyncServer  BwManagerTester.cpp  C-HPCMonitor.c  ConnectionHandler.hpp  HPCMonitor.cpp  client  mba_logs_processor.py  server  server.cpp
test/boost_asio_sockets/: AsyncServer  AsyncServer.cpp  ConnectionHandler.hpp  MemorySegment.hpp  async_client_serialized  async_client_serialized.cpp  async_server.cpp  async_server_serialized  async_server_serialized.cpp  client  client.cpp  client_1.cpp  client_2.cpp  client_serialization  client_serialization.cpp  connection_handler.hpp  connection_serialization.hpp  poll_n_clients  poll_n_clients.cpp  server  server.cpp  server_2.cpp  server_serialization  server_serialization.cpp  stock.hpp
